Remove dependency on node util package

--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "bl": "^1.2.0",
     "depd": "^1.1.2",
     "iconv-lite": "^0.4.11",
+    "punycode": "^2.1.0",
     "readable-stream": "^2.2.6",
     "sprintf-js": "^1.1.1",
-    "punycode": "^2.1.0"
+    "util-inspect": "^0.1.8",
+    "util.inherits": "^1.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^6.0.2",
