--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "big-number": "0.3.1",
     "bl": "^1.2.0",
     "depd": "^1.1.2",
+    "events": "^2.0.0",
     "iconv-lite": "^0.4.11",
     "punycode": "^2.1.0",
     "readable-stream": "^2.2.6",
